--- a/index.html
+++ b/index.html
@@ -185,9 +185,179 @@
                 </div>
             </div>
         </section>
+        <!-- Quality work -->
+        <section id="qualitywork">
+            <div class="container">
+                <div class="row work__container">
+                    <div class="work__description">
+                        <h5 class="section__name">Quality Work</h5>
+                        <h2 class="section__title work__title">
+                            Designed & Developed by
+                            <span class="text--color">Professional</span>
+                        </h2>
+                        <p class="section__para">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Tenetur voluptatibus alias necessitatibus magnam aspernatur vero aliquid quidem, ratione id 
+                            obcaecati dolorum labore repellat eveniet. Quos labore ab accusamus inventore et?
+                        </p>
+                        <button>
+                            <a href="" class="section__button--link">Learn More</a>
+                        </button>
+                    </div>
+                    <div class="work__img--wrap">
+                        <img class="work__img" src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png
+                        " alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- steps -->
+        <section id="step">
+
+        </section>
+
+        <!-- values -->
+        <section id="values">
+
+        </section>
+
+        <section id="pricing">
+            <div class="container">
+                <div class="row">
+                    <div class="plans">
+                        <div class="plan__description">
+                            <h5 class="pricing features__head">
+                                <span class="text-color">Pricing</span>
+                            </h5>
+                            <h2 class="section__title">Reasonable & Flexible <span class="text-color">Plans</span></h2>
+                            <p class="section__para">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit placeat, 
+                                a facere laboriosam voluptatem quod ratione voluptate et molestiae mollitia!
+                            </p>
+                        </div>
+                        <div class="plan">
+                            <h5 class="plan__title">Personal</h5>
+                            <h3 class="plan__pricing">
+                                $17.99
+                            </h3>
+                            <h5 class="monthly">
+                                Monthly
+                            </h5>
+                            <hr>
+                            <h4 class="pricing__name">
+                                For individuals
+                            </h4>
+                            <p class="plan__info">30 templates</p>
+                            <p class="plan__info">7 Landing Pages</p>
+                            <p class="plan__info">12 Internal Pages</p>
+                            <p class="plan__info">Basic Assistance</p>
+                            <hr>
+                            <button type="button">Buy now</button>
+                        </div>
+
+                        <div class="plan">
+                            <h5 class="plan__title">Business</h5>
+                            <h3 class="plan__pricing">
+                                $37.99
+                            </h3>
+                            <h5 class="monthly">
+                                Monthly
+                            </h5>
+                            <hr>
+                            <h4 class="pricing__name">
+                                For Small Business
+                            </h4>
+                            <p class="plan__info">60 templates</p>
+                            <p class="plan__info">15 Landing Pages</p>
+                            <p class="plan__info">22 Internal Pages</p>
+                            <p class="plan__info">Priority Assistance</p>
+                            <hr>
+                            <button type="button">Buy now</button>
+                        </div>
+
+                        <div class="plan">
+                            <h5 class="plan__title">Enterprise</h5>
+                            <h3 class="plan__pricing">
+                                $57.99
+                            </h3>
+                            <h5 class="monthly">
+                                Monthly
+                            </h5>
+                            <hr>
+                            <h4 class="pricing__name">
+                                For Large Companies
+                            </h4>
+                            <p class="plan__info">90 templates</p>
+                            <p class="plan__info">27 Landing Pages</p>
+                            <p class="plan__info">37 Internal Pages</p>
+                            <p class="plan__info">Personal Assistance</p>
+                            <hr>
+                            <button type="button">Buy now</button>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
+        <div class="row">
+            <div class="footer__container">
+                <div class="footer__links">
+                    <h5 class="footer__title">Main</h5>
+                    <ul class="footer__list">
+                        <a href="" class="footer__link">Blogs</a>
+                        <a href="" class="footer__link">FAQs</a>
+                        <a href="" class="footer__link">Support</a>
+                        <a href="" class="footer__link">About Us</a>
+                    </ul>
+                </div>
 
+                <div class="footer__links">
+                    <h5 class="footer__title">Product</h5>
+                    <ul class="footer__list">
+                        <a href="" class="footer__link">Log in</a>
+                        <a href="" class="footer__link">Personal</a>
+                        <a href="" class="footer__link">Business</a>
+                        <a href="" class="footer__link">Team</a>
+                    </ul>
+                </div>
+
+                <div class="footer__links">
+                    <h5 class="footer__title">Press</h5>
+                    <ul class="footer__list">
+                        <a href="" class="footer__link">Logos</a>
+                        <a href="" class="footer__link">Events</a>
+                        <a href="" class="footer__link">Stories</a>
+                        <a href="" class="footer__link">Office</a>
+                    </ul>
+                </div>
+
+                <div class="footer__links">
+                    <h5 class="footer__title">Team</h5>
+                    <ul class="footer__list">
+                        <a href="" class="footer__link">Career</a>
+                        <a href="" class="footer__link">Founders</a>
+                        <a href="" class="footer__link">Culture</a>
+                        <a href="" class="footer__link">Onboarding</a>
+                    </ul>
+                </div>
+
+                <div class="footer__links">
+                    <h5 class="footer__title">Legal</h5>
+                    <ul class="footer__list">
+                        <a href="" class="footer__link">GDPR</a>
+                        <a href="" class="footer__link">Privacy Policy</a>
+                        <a href="" class="footer__link">Terms of Service</a>
+                        <a href="" class="footer__link">Disclaimer</a>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="footer__description">
+
+            </div>
+        </div>
     </footer>
 </body>
 </html>
